--- a/pom.xml
+++ b/pom.xml
@@ -15,18 +15,17 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
-<project  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.wildfly.quickstarts</groupId>
     <artifactId>wicket-parent</artifactId>
     <version>10.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>WildFly Quickstart: wicket-ear</name>
+    <name>WildFly Top-level project</name>
     <description>
         A sample JAVA EE 7 project demonstrating how to use Wicket Framework with JBoss WildFly.
         EAR with EJB JAR and WAR version.
     </description>
-
     <licenses>
         <license>
             <name>Apache License, Version 2.0</name>
@@ -34,40 +33,31 @@
             <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
         </license>
     </licenses>
-
     <properties>
         <!-- Explicitly declaring the source encoding eliminates the following message: -->
         <!-- [WARNING] Using platform encoding (UTF-8 actually) to copy filtered
             resources, i.e. build is platform dependent! -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
         <!-- JBoss dependency versions -->
-
         <version.wildfly.maven.plugin>1.0.2.Final</version.wildfly.maven.plugin>
-
         <version.jboss.spec.javaee.7.0>1.0.3.Final</version.jboss.spec.javaee.7.0>
-
-
         <!-- Other dependency versions -->
         <version.org.apache.wicket>7.3.0</version.org.apache.wicket>
-
         <!-- other plugin versions -->
         <version.compiler.plugin>3.5.1</version.compiler.plugin>
         <version.ear.plugin>2.6</version.ear.plugin>
         <version.ejb.plugin>2.3</version.ejb.plugin>
         <version.war.plugin>3.0.0</version.war.plugin>
-
         <!-- maven-compiler-plugin -->
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
     </properties>
-
     <modules>
         <module>ejb</module>
         <module>war</module>
         <module>ear</module>
+        <module>svr</module>
     </modules>
-
     <dependencyManagement>
         <dependencies>
             <!-- JBoss distributes a complete set of Java EE 7 APIs including
@@ -85,7 +75,6 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-
             <!-- Wicket -->
             <dependency>
                 <groupId>org.apache.wicket</groupId>
@@ -98,14 +87,12 @@
                     </exclusion>
                 </exclusions>
             </dependency>
-
             <!-- Wicket Java EE integration. -->
             <dependency>
                 <groupId>org.apache.wicket</groupId>
                 <artifactId>wicket-cdi-1.1</artifactId>
                 <version>${version.org.apache.wicket}</version>
             </dependency>
-
             <!-- EJB JAR module. -->
             <dependency>
                 <groupId>org.wildfly.quickstarts</groupId>
@@ -113,7 +100,6 @@
                 <version>${project.version}</version>
                 <type>ejb</type>
             </dependency>
-
             <!-- WAR module. -->
             <dependency>
                 <groupId>org.wildfly.quickstarts</groupId>
@@ -121,13 +107,16 @@
                 <version>${project.version}</version>
                 <type>war</type>
             </dependency>
-
         </dependencies>
     </dependencyManagement>
-
     <build>
         <pluginManagement>
             <plugins>
+                <plugin>
+                    <groupId>de.jpdigital</groupId>
+                    <artifactId>hibernate51-ddl-maven-plugin</artifactId>
+                    <version>2.1.0-beta.1</version>
+                </plugin>
                 <!-- Compiler plugin enforces Java 1.6 compatibility and
                     activates annotation processors -->
                 <plugin>
@@ -152,8 +141,8 @@
                         <skip>true</skip>
                     </configuration>
                 </plugin>
+
             </plugins>
         </pluginManagement>
     </build>
-
 </project>
